# anomalyhunters

./: .gitignore  CMakeLists.txt  REPORT.md  equipment_anomaly_rf.onnx  main.cpp
backend/: AnomalyDetector.cpp  AnomalyDetector.h  DatabaseManager.cpp  DatabaseManager.h  DemoBackend.cpp  DemoBackend.h  Device.h  DeviceManager.cpp  DeviceManager.h  DeviceMonitor.cpp  DeviceMonitor.h  DeviceRepository.cpp  DeviceRepository.h  DeviceTimeSeriesSimulator.cpp  DeviceTimeSeriesSimulator.h  Equipment.h  EquipmentListModel.cpp  EquipmentListModel.h  EquipmentManager.cpp  EquipmentManager.h  EquipmentMonitor.cpp  EquipmentMonitor.h  StateLogListModel.cpp  StateLogListModel.h
onnx/: equipment_anomaly_rf.onnx  generate_data.py
scripts/: fetch_onnxruntime.bat  fetch_onnxruntime.sh
ui/: Main.qml
ui/components/: AddDeviceDialog.qml  AppButton.qml  Constant.qml  ControlSwitch.qml  DetailHeader.qml  DeviceDialog.qml  DeviceHeader.qml  DeviceListItem.qml  EditDeviceDialog.qml  EquipmentDelegate.qml  EquipmentDialog.qml  EquipmentHeader.qml  EquipmentList.qml  EquipmentListItem.qml  HistoryChart.qml  ImageCard.qml  InferenceCard.qml  LabeledInput.qml  LogList.qml  ManualSaveDialog.qml  SensorCard.qml  SensorRow.qml  StateLogDelegate.qml  StateLogDialog.qml  StateLogList.qml  StateLogPanel.qml  StatusCard.qml  TestDataPanel.qml
ui/dialogs/: EquipmentDialog.qml  ManualSaveDialog.qml  StateLogDialog.qml  TestDataDialog.qml
ui/layout/: AppLayout.qml  AppLayoutForm.ui.qml  DetailLayout.qml  DetailLayoutForm.ui.qml  DetailPanel.qml  HeaderLayout.qml  MasterDetailLayout.qml  MasterDetailLayoutForm.ui.qml  MasterLayout.qml  MasterLayoutForm.ui.qml  MasterPanel.qml
